fixing popup text align

--- a/density/static/style.css
+++ b/density/static/style.css
@@ -146,6 +146,7 @@ p {
 }
 
 .popup {
+    text-align: left;
     visibility: hidden;
     background-color: #468fcc;
     color: #fff;
